<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:descendantFocusability="blocksDescendants"
  android:padding="20dp"
  >

  <TextView
    android:id="@+id/paragraph_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fontFamily="sans-serif-light"
    android:lineSpacingExtra="6sp"
    android:text="@string/content"
    android:textColor="@color/black"/>

</LinearLayout>