<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.RegisterActivity">

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btn_checkVerificationCode"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:visibility="visible"
        app:fb_textColor="#F5F2F2"
        app:layout_constraintBottom_toBottomOf="@+id/pinCode"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="#30363E"
        fancy:fb_focusColor="#585E65"
        fancy:fb_radius="5dp"
        fancy:fb_text="Verify" />

    <TextView
        android:id="@+id/bt_goToLogin"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="Already have an account?"
        android:textColor="@color/smssdk_gray"
        android:textSize="18sp"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_signUp" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/bt_signUp"
        android:layout_width="336dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"

        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:visibility="visible"
        app:fb_textColor="#F5F2F2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="#30363E"
        fancy:fb_focusColor="#585E65"
        fancy:fb_radius="5dp"
        fancy:fb_text="Sign up" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/usernameRegister"
        android:layout_width="327dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="8dp"
        android:hint="Username"
        android:textSize="14sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32999998" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/passwordRegister"
        android:layout_width="327dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:typeface="sans"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameRegister" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="Hello, my friend!"
        android:textColor="@color/smssdk_lv_title_color"
        android:textSize="36sp"
        android:typeface="normal"
        app:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999" />

    <TextView
        android:id="@+id/words2"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="4dp"
        android:text="You = new MyFriend();"
        app:fontFamily="sans-serif-light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title2" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btn_getVerificationCode"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:visibility="visible"
        app:fb_textColor="#F5F2F2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegister"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="#30363E"
        fancy:fb_focusColor="#585E65"
        fancy:fb_radius="5dp"
        fancy:fb_text="Get Pin" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/phoneNumber"
        android:layout_width="221dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:hint="Phone number"
        android:textSize="14sp"
        android:typeface="sans"
        app:layout_constraintHorizontal_bias="0.221"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegister" />

    <com.github.glomadrian.codeinputlib.CodeInput
        android:id="@+id/pinCode"
        android:layout_width="223dp"
        android:layout_height="22dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:codes="4"
        app:hint_color="#77ce9d"
        app:hint_text="Pin code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
        app:text_color="#b12eff"
        app:underline_color="#457ad1"
        app:underline_selected_color="#9e1ace" />

</android.support.constraint.ConstraintLayout>